add hover states

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,6 +3,8 @@ $primary-color-blue: #4D96A9;
 $primary-color-purple: #855FB1;
 $color-dark-blue: #28283D;
 $color-gray: #87879D;
+$color-blue: #71C0D4;
 $color-light-blue: #8FE3F9;
+$color-purple: #B18BDD;
 $color-light-purple: #D9B8FF;
 $color-light-gray: #FAFAFA;
