--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,18 +106,29 @@
     font-size: 1.6rem;
     font-weight: 800;
     border-radius: 4rem;
-    border-color: transparent;
-    padding: 2rem 3rem;
+    border-color: transparent;    
     color: $color-light-gray;
-    background: $primary-color-purple;
 }
 .download-btn {
     padding: 2rem 4rem;
     background: $primary-color-blue;
+    &:hover {
+        cursor: pointer;
+        background: $color-blue;
+    }
+}
+.info-btn {
+    padding: 2rem 3rem;
+    background: $primary-color-purple;
+    &:hover {
+        cursor: pointer;
+        background: $color-purple;
+    }
 }
 .version {
     color: $color-light-blue;
 }
+
 
 // section usage
 .section-usage {
@@ -132,7 +143,6 @@
 }
 .step {
     min-height: 100%;
-    margin-bottom: 4rem;
     &::before {
         content: "";
         display: block;
@@ -162,6 +172,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
     margin-bottom: 4rem;
+
     @media screen and (min-width: 37rem){
         grid-template-columns: repeat(4, 1fr);
     }
@@ -208,24 +219,33 @@
     
 }
 .section-download {
-    overflow: hidden;
-    min-height: 100%;    
+    // overflow: hidden;
+    min-height: 100%;  
+    position: relative;
+    margin-top: 10rem;
+
+    .step {
+        margin-bottom: 0;
+        // z-index: 9999;
+        position: absolute;
+        top: -10.5rem;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 9999;
+    }
 }
-.step {
-    margin-bottom: 0;
-    z-index: 9999;
-}
+
 
 .download-description {
     min-height: 100%;
     // to remove whitspace at the bottom
     margin-bottom: -3rem;
-    z-index: -1;
+    z-index: 1;
     background: linear-gradient(hsla(192, 37%, 48%, 0.9), hsla(192, 37%, 48%, 0.9)), url('../assets/mobile/image-footer.jpg');
     background-size: cover;
     background-repeat: no-repeat;    
-    position: relative;
-    top: -3rem;
+    // position: relative;
+    // top: -3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -244,13 +264,8 @@
         font-weight: 600;
         font-size: 1.8rem;
     }
-    .download-btn {
-        font-weight: 900;
-        background: $primary-color-purple;
-    }
-    .version {
-        color: $color-light-purple;
-    }
+    
+    
     @media screen and (min-width: 37rem) {        
         padding: 8rem 10rem;
         background: linear-gradient(hsla(192, 37%, 48%, 0.9), hsla(192, 37%, 48%, 0.9)), url('../assets/tablet/image-footer.jpg') no-repeat;
@@ -275,4 +290,19 @@
             flex-basis: 28%;
         }
     }
+}
+
+
+.download-btn-purple { 
+     
+    font-weight: 900;
+    background: $primary-color-purple;
+
+    &:hover, &:active {  
+        cursor: pointer;
+        background: $color-purple;
+    }
+}
+.download-description .version {
+    color: $color-light-purple;
 }
